--- a/_data/system/storage/secure-erase.yaml
+++ b/_data/system/storage/secure-erase.yaml
@@ -17,38 +17,29 @@ scenario: !!map
 
   # LUKS ON SINGLE PARTITION
   luks_single_partition: !!map
-    context     : !!str partition
-    plural      : !!bool false
-    headerless  : !!bool false
-    containers: !!seq
+    plural  : !!bool false
+    devices : !!seq
       - !!map
-        node: !!str /dev/sda2
+        node    : !!str /dev/sda
+        mapper  : !!str to_be_wiped
 
   # LUKS ON MULTIPLE PARTITIONS
   luks_multiple_partitions: !!map
-    context     : !!str partitions
-    plural      : !!bool true
-    headerless  : !!bool false
-    containers: !!seq
+    plural  : !!bool true
+    devices : !!seq &MD
       - !!map
-        node: !!str /dev/sda2
+        node    : !!str /dev/sda
+        mapper  : !!str to_be_wiped1
       - !!map
-        node: !!str /dev/sdb1
+        node    : !!str /dev/sdb
+        mapper  : !!str to_be_wiped2
 
   # LUKS ON RAID
   luks_raid: !!map
-    context     : !!str raid array
-    plural      : !!bool true
-    headerless  : !!bool false
-    containers: !!seq
-      - !!map
-        node: !!str /dev/md/array
+    plural  : !!bool true
+    devices : *MD
 
   # LUKS ON LOGICAL VOLUMES
   luks_logical_volumes: !!map
-    context     : !!str root partition
-    plural      : !!bool true
-    headerless  : !!bool false
-    containers: !!seq
-      - !!map
-        node: !!str /dev/grp/cryptroot
+    plural  : !!bool true
+    devices : *MD
