General: Disable search. Delete temporary files.

--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,7 @@ baseurl: "/Andromeda"
 url: ""
 github_username:  ChaosDynamix
 footer_content: "Copyright &copy; 2020 ChaosDynamix."
+search_enabled: false
 
 # Build settings
 markdown: kramdown
