General: Fix javascript issue. Fix search feature. Re-activate search.

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ baseurl: "/Andromeda"
 url: ""
 github_username:  ChaosDynamix
 footer_content: "Copyright &copy; 2020 ChaosDynamix."
-search_enabled: false
+search_enabled: true
 
 # Build settings
 markdown: kramdown
@@ -52,14 +52,6 @@ collections:
 
 # Defaults
 defaults:
-  -
-    scope:
-      path: ""
-      type: "pages"
-    values:
-      layout: default
-      nav_exclude: true
-      search_exclude: true
   -
     scope:
       path: "src/_library"
