--- a/_data/system/configuration/initial-ramdisk.yaml
+++ b/_data/system/configuration/initial-ramdisk.yaml
@@ -1,6 +1,6 @@
 # LVM - LUKS ON SINGLE PARTITION
 b84ab5fb-9500-4b17-b322-bd04e31f5d3a: !!str |
-                                      FILES=(/etc/luks-key/cryptlvm.keyfile)
+                                      FILES=(/etc/luks-keys/cryptlvm.keyfile)
                                       HOOKS=(base udev autodetect modconf block encrypt lvm2 filesystems keyboard keymap fsck)
 
 # LVM - LUKS ON MULTIPLE PARTITIONS
@@ -10,10 +10,10 @@ b84ab5fb-9500-4b17-b322-bd04e31f5d3a: !!str |
 
 # LVM - LUKS ON RAID
 ff8a81bc-82d1-440a-9f71-df9676a19a26: !!str |
-                                      FILES=(/etc/luks-key/cryptlvm.keyfile)
+                                      FILES=(/etc/luks-keys/cryptlvm.keyfile)
                                       HOOKS=(base udev autodetect modconf block mdadm_udev encrypt lvm2 filesystems keyboard keymap fsck)
 
 # LVM - LUKS ON LOGICAL VOLUMES
 a852843f-53ac-47e9-a82d-d6cf288c8b76: !!str |
-                                      FILES=(/etc/luks-key/cryptroot.keyfile)
+                                      FILES=(/etc/luks-keys/cryptroot.keyfile)
                                       HOOKS=(base udev autodetect modconf block encrypt lvm2 filesystems keyboard keymap fsck)
